# Backend

./: .gitignore  .gitmodules  main.ipynb  main.py  pyproject.toml
lib/: game.py  general.py  init.py  model.py
pages/: game_adapter.py  model.py  test.py
